完善添加书籍界面

--- a/SmartLibrary/Views/MainWindow.xaml
+++ b/SmartLibrary/Views/MainWindow.xaml
@@ -9,6 +9,8 @@
     Title="智慧图书馆"
     Width="1100"
     Height="650"
+    MinWidth="1100"
+    MinHeight="650"
     d:DataContext="{d:DesignInstance local:MainWindow,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
