完善图书添加

--- a/SmartLibrary/Views/Pages/AddBook.xaml
+++ b/SmartLibrary/Views/Pages/AddBook.xaml
@@ -41,15 +41,15 @@
             <ui:Button
                 Grid.Column="0"
                 MinWidth="130"
+                Margin="0,0,8,0"
                 Appearance="Success"
                 Command="{Binding ViewModel.ScanButtonClickCommand, Mode=OneWay}"
                 Content="扫描"
-                FontSize="20"
-                IsEnabled="{Binding ViewModel.IsScanButtonEnabled, Mode=OneWay}" />
+                FontSize="24"
+                Visibility="{Binding ViewModel.IsScanButtonEnabled, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}" />
             <ui:TextBox
                 Name="IsbnBox"
                 Grid.Column="1"
-                Margin="8,0,0,0"
                 extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
                 FontSize="20"
                 MaxLength="13"
@@ -71,21 +71,22 @@
                 Command="{Binding ViewModel.SearchButtonClickCommand, Mode=OneWay}"
                 CommandParameter="{Binding ElementName=IsbnBox, Path=Text}"
                 Content="查询(Enter)"
-                FontSize="20"
+                FontSize="24"
                 IsEnabled="{Binding ViewModel.IsSearchButtonEnabled, Mode=OneWay}" />
         </Grid>
         <Grid
             Grid.Row="1"
-            Margin="0,12,0,0"
+            Margin="0,8,0,0"
             Visibility="{Binding ViewModel.IsBookExisted, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
             <ui:InfoBar
                 Title="提示"
                 FontSize="16"
+                IsClosable="False"
                 IsOpen="True"
-                Message="本书已在数据库中!"
+                Message="本书已在数据库中！若要更改书籍信息，请转到编辑界面。"
                 Severity="Warning" />
         </Grid>
-        <Grid Grid.Row="2" Margin="0,12,0,0">
+        <Grid Grid.Row="2" Margin="0,8,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*" />
                 <ColumnDefinition Width="*" />
@@ -125,39 +126,32 @@
                     </Grid>
                     <ScrollViewer
                         Grid.Row="1"
+                        Margin="0,16,0,0"
                         extensions:ScrollAnimationBehavior.IsEnabled="True"
                         extensions:ScrollAnimationBehavior.PointsToScroll="16"
                         extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
                         <Grid>
-                            <StackPanel Grid.Row="0" Margin="48,32,48,0">
-                                <ui:TextBox
+                            <StackPanel Grid.Row="0">
+                                <ui:TextBlock
                                     MaxWidth="400"
-                                    HorizontalContentAlignment="Center"
-                                    BorderThickness="0"
+                                    HorizontalAlignment="Center"
                                     FontSize="24"
-                                    PlaceholderText="书名"
-                                    PreviewKeyDown="TextBox_PreviewKeyDown"
-                                    Text="{Binding ViewModel.BookName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Text="{Binding ViewModel.BookNameText, Mode=OneWay}"
                                     TextWrapping="Wrap" />
-                                <ui:TextBox
+                                <ui:TextBlock
                                     MaxWidth="400"
                                     Margin="0,8,0,0"
-                                    HorizontalContentAlignment="Center"
-                                    BorderThickness="0"
+                                    HorizontalAlignment="Center"
+                                    Cursor="IBeam"
                                     FontSize="24"
-                                    PlaceholderText="作者"
-                                    PreviewKeyDown="TextBox_PreviewKeyDown"
-                                    Text="{Binding ViewModel.Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Text="{Binding ViewModel.AuthorText, Mode=OneWay}"
                                     TextWrapping="Wrap" />
-                                <ui:TextBox
+                                <ui:TextBlock
                                     MaxWidth="400"
                                     Margin="0,8,0,0"
-                                    HorizontalContentAlignment="Center"
-                                    BorderThickness="0"
+                                    HorizontalAlignment="Center"
                                     FontSize="24"
-                                    PlaceholderText="出版社"
-                                    PreviewKeyDown="TextBox_PreviewKeyDown"
-                                    Text="{Binding ViewModel.Press, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Text="{Binding ViewModel.PressText, Mode=OneWay}"
                                     TextWrapping="Wrap" />
                             </StackPanel>
                         </Grid>
@@ -260,6 +254,51 @@
                     </ui:CardExpander>
                     <ui:CardExpander Margin="0,12,0,0" IsExpanded="True">
                         <ui:CardExpander.Header>
+                            <ui:TextBlock FontSize="24" Text="图书信息" />
+                        </ui:CardExpander.Header>
+                        <ui:CardExpander.Content>
+                            <StackPanel>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="书名：" />
+                                    <ui:TextBox
+                                        Grid.Column="1"
+                                        Height="36"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.BookName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                                <Grid Margin="0,6,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="作者：" />
+                                    <ui:TextBox
+                                        Grid.Column="1"
+                                        Height="36"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                            </StackPanel>
+                        </ui:CardExpander.Content>
+                    </ui:CardExpander>
+                    <ui:CardExpander Margin="0,12,0,0" IsExpanded="True">
+                        <ui:CardExpander.Header>
                             <ui:TextBlock FontSize="24" Text="出版信息" />
                         </ui:CardExpander.Header>
                         <ui:CardExpander.Content>
@@ -325,7 +364,7 @@
                     </ui:CardExpander>
                     <ui:CardExpander Margin="0,12,0,0" IsExpanded="True">
                         <ui:CardExpander.Header>
-                            <ui:TextBlock FontSize="24" Text="图书信息" />
+                            <ui:TextBlock FontSize="24" Text="详细信息" />
                         </ui:CardExpander.Header>
                         <ui:CardExpander.Content>
                             <StackPanel>
