完成添加书籍功能

--- a/SmartLibrary/App.xaml
+++ b/SmartLibrary/App.xaml
@@ -12,7 +12,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
-                <ResourceDictionary Source="pack://application:,,,/Resources/MyButton.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Style/MyButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
         </ResourceDictionary>
